[TASK] Compiled default Theme

--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -10,7 +10,7 @@
   --cc-btn-secondary-hover-bg: #d8e0e6;
   --cc-btn-border-radius: 4px;
   --cc-toggle-bg-off: #919ea6;
-  --cc-toggle-bg-on: var(#2d4156);
+  --cc-toggle-bg-on: #2d4156;
   --cc-toggle-bg-readonly: #d5dee2;
   --cc-toggle-knob-bg: #fff;
   --cc-toggle-knob-icon-color: #ecf2fa;
@@ -31,6 +31,7 @@
   border: none;
   border-radius: unset;
   box-shadow: none;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   color: inherit;
   float: none;
@@ -224,6 +225,7 @@
   padding: 1em 1.7em;
   text-align: center;
   -moz-user-select: none;
+  -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
   user-select: none;
@@ -589,6 +591,7 @@
   right: 1.2em;
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   vertical-align: middle;
 }
@@ -1296,6 +1299,7 @@ html.force--consent.show--consent, html.force--consent.show--consent body {
 }
 
 div[data-service], div[data-service]:after, div[data-service]:before {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   float: none;
   font-style: inherit;
@@ -1410,6 +1414,8 @@ div[data-service] .c-bg::before {
   transition: opacity 0.3s ease, visibility 0.3s ease;
   background: #1e3861;
   background: linear-gradient(14deg, rgba(12, 15, 23, 0.95) 10%, rgba(0, 0, 0, 0.51) 100%, rgba(68, 77, 125, 0.1082983535) 0);
+  background: -moz-linear-gradient(14deg, #1e3861 0, rgba(206, 220, 233, 0.1181022751) 100%);
+  background: -webkit-linear-gradient(14deg, #1e3861 0, rgba(206, 220, 233, 0.1181022751) 100%);
   background: linear-gradient(14deg, #1e3861 0, rgba(206, 220, 233, 0.1181022751) 100%);
 }
 
@@ -1751,4 +1757,6 @@ div[data-service] .c-n-t a:hover {
   .cookie-description-active {
     display: block !important;
   }
-}/*# sourceMappingURL=default.css.map */
+}
+
+/*# sourceMappingURL=default.css.map */
