[BUGFIX] table has no field sorting, sort by name

--- a/Resources/Private/Partials/BackendTabs/services.html
+++ b/Resources/Private/Partials/BackendTabs/services.html
@@ -18,8 +18,8 @@
                                 levels="0"
                                 filter=""
                                 recordsPerPage="50"
-                                sortField="sorting"
-                                sortDescending="true"
+                                sortField="name"
+                                sortDescending="false"
                                 readOnly="false"
                                 enableClickMenu="true"
                                 enableControlPanels="true"
