[BUGFIX] Invalid HTML in Consent-Settings Button #59

--- a/Resources/Private/Templates/CookieFrontend/List.html
+++ b/Resources/Private/Templates/CookieFrontend/List.html
@@ -9,7 +9,7 @@
             </f:then>
             <f:else>
                 <div class="cf-cookie-openconsent">
-                    <a type="button" data-cc="c-settings" href="#" title="cookie consent" aria-haspopup="dialog">
+                    <a role="button" data-cc="c-settings" href="#" title="cookie consent" aria-haspopup="dialog">
                         <f:image title="Cookie Settings" alt="Cookie Extension Logo" width="30" src="EXT:cf_cookiemanager/Resources/Public/Icons/Extension.svg"/>
                     </a>
                 </div>
