--- a/Resources/Private/Partials/BackendTabs/administration.html
+++ b/Resources/Private/Partials/BackendTabs/administration.html
@@ -4,7 +4,7 @@
         <div class="card-header">
             <div class="card-header-body">
                 <h1 class="card-title">Extension Administration</h1>
-                <span class="card-subtitle">Deep dive into Coding-Freaks Cookiemanager</span>
+                <span class="card-subtitle">Deep dive into Coding-Freaks CookieManager</span>
             </div>
         </div>
     </div>
