[TASK] Testing Changes

--- a/Resources/Private/Partials/BackendTabs/administration.html
+++ b/Resources/Private/Partials/BackendTabs/administration.html
@@ -4,7 +4,7 @@
         <div class="card-header">
             <div class="card-header-body">
                 <h1 class="card-title">Extension Administration</h1>
-                <span class="card-subtitle">Deep dive into Coding-Freaks CookieManager</span>
+                <span class="card-subtitle">Deep dive into Coding-Freaks CookieManager Datasets</span>
             </div>
         </div>
     </div>
@@ -12,7 +12,7 @@
         <div class="col col-sm-12 col-md-12 col-xl-8">
             <div class="cf-color-wrapper">
                     <div id="loading-spinner" style="display:none;">
-                        Loading update index... <typo3-backend-spinner size="small"></typo3-backend-spinner>
+                        Loading update index from remote API... <typo3-backend-spinner size="small"></typo3-backend-spinner>
                     </div>
                     <button type="button" id="cf-start-update-check" data-cf-storage="{storageUID}" class="btn btn-primary">Check for Dataset API-Updates</button>
             </div>
@@ -25,10 +25,7 @@
         <div class="col col-sm-12 col-md-12 col-xl-4">
             <div class="cf-tutorial-section">
                 <h3> Data Administration </h3>
-                <p> TODO : Update your Datasets  </p>
-                <div class="cf-cookie-btn-group">
-                    <a class="btn btn-primary btn-cookie-tutorial" target="_blank" href="">Administration Docs -></a>
-                </div>
+                <p> Check for Dataset Updates on the API and compare it with your locale changes </p>
             </div>
         </div>
     </div>
