[TASK] Added Update Wizard for Frontend-Datasets

--- a/Resources/Private/Partials/BackendTabs/administration.html
+++ b/Resources/Private/Partials/BackendTabs/administration.html
@@ -25,7 +25,7 @@
         <div class="col col-sm-12 col-md-12 col-xl-4">
             <div class="cf-tutorial-section">
                 <h3> Data Administration </h3>
-                <p> Check for Dataset Updates on the API and compare it with your locale changes </p>
+                <p> Check for Dataset Updates on the API and compare it with your locale changes.</p>
             </div>
         </div>
     </div>
