--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -474,8 +474,12 @@ table.dataTable {
 .cf-cookiemanager-see-more {
   background: transparent;
   padding: 5px 5px;
-  border-bottom: solid 1px white !important;
+  border-bottom: solid 1px black !important;
+  color: black;
+}
+[data-color-scheme=dark] .cf-cookiemanager-see-more {
   color: white;
+  border-bottom: solid 1px white !important;
 }
 
 .cf-cookiemanager-ignore {
