[TASK] PopUP in Update view for easy navigation to affected records / Update Wizard T13 Support

--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -459,6 +459,10 @@ table.dataTable {
   flex-grow: 1;
 }
 
+.cf-cookiemanager-change-list-item-name {
+  cursor: pointer;
+}
+
 .cf-cookiemanager-buttons {
   display: flex;
   gap: 10px;
