--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -555,6 +555,10 @@ table.dataTable {
   flex-grow: 1;
 }
 
+.cf-cookiemanager-change-list-item-name{
+  cursor: pointer;
+}
+
 .cf-cookiemanager-buttons {
   display: flex;
   gap: 10px;
