--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -52,7 +52,7 @@
                             <div id="cf-offlineDatasetInstall" style="display: none">
                                 <!-- Custom import needed -->
                                 <p>You can import the data manually. Keep in mind, in this case you can not use the codingfreaks API Features in this Extension.</p>
-                                <a class="btn btn-primary" target="_blank" href="https://cookieapi.coding-freaks.com/application-programming-interface">Download Preset</a>
+                                <a class="btn btn-primary" target="_blank" href="https://coding-freaks.com/cookie-database">Download Preset</a>
                                 <hr>
                                 <!-- Add form for zip upload -->
 
@@ -108,7 +108,7 @@
                         powered by <a href="https://coding-freaks.com" target="_blank">CodingFreaks</a>  |  <a target="_blank" href="https://typo3.slack.com/archives/C04NB2ZP30U"><strong>Questions?</strong> Join the Typo3 Slack Channel #ext-cfcookiemanager</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Sitemap.html" target="_blank">CookieManager Documentation</a> | <a href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/ChangeLog/Index.html" target="_blank">Changelog</a>
                     </div>
                     <div>
-                        <a href="https://cookieapi.coding-freaks.com/" target="_blank">CodingFreaks GDPR Scanner & CookieAPI</a>
+                        <a href="https://coding-freaks.com/cookie-scanner" target="_blank">CodingFreaks GDPR Scanner & CookieAPI</a>
                     </div>
                 </div>
             </f:else>
